# Karprotein

./: .gitignore  README.md  plot_results.py  prepare.py  program.md  pyproject.toml  test_smoke.py  train.py
