[project]
name = "karprotein"
version = "0.1.0"
description = "Autonomous research for protein inverse folding"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
    "requests>=2.32.0",
    "setuptools>=82.0",
    "tensorboard>=2.19.0",
    "torch==2.9.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform != 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
